<resources>
	<string name="app_name">ShosetsuSY</string>
	<string name="website">Website</string>
	<string name="github" translatable="false">Gitlab</string>
	<string name="matrix" translatable="false">Matrix</string>
	<string name="discord" translatable="false">Discord</string>
	<string name="patreon_support">Support the developer on Patreon</string>
	<string name="patreon" translatable="false">Patreon</string>
	<string name="kofi" translatable="false">Ko-fi</string>
	<string name="kofi_support">Support the developer on Ko-fi</string>
	<string name="header_text">Novel reading right on your phone!</string>
	<string name="todo">TODO</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="search">Search</string>
	<string name="filter">Filter</string>
	<string name="library">Library</string>
	<string name="library_summary">Categories, global update</string>
	<string name="updates">Updates</string>
	<string name="extensions">Extensions</string>
	<string name="downloads">Downloads</string>
	<string name="downloads_summary">Automatic download, download restrictions</string>
	<string name="settings">Settings</string>
	<string name="text_size">Text size</string>
	<string name="paragraph_spacing">Paragraph spacing</string>
	<string name="paragraph_indent">Paragraph indent</string>
	<string name="novel_author">Author(s): </string>
	<string name="fragment_novel_chapter_position">Position:</string>
	<string name="backup_now">Create backup</string>
	<string name="pending">Pending</string>
	<string name="downloaded">Downloaded</string>
	<string name="none">None</string>
	<string name="select_all">Select All</string>
	<string name="deselect_all">Deselect All</string>
	<string name="retry">Retry</string>
	<string name="read">Read</string>
	<string name="unread">Unread</string>
	<string name="reader_pitch">TTS Pitch</string>
	<string name="reader_speed">TTS Speed</string>
	<string name="reader_engine">TTS Engine</string>
	<string name="reader_voice">TTS Voice</string>
	<string name="reader_language">TTS Language</string>
	<string name="reader_test">Test TTS</string>
	<string name="reader_test_invalid_engine">TTS engine failed to start</string>
	<string name="reader_test_invalid_language">Invalid language selection</string>
	<string name="reader_test_invalid_voice">Invalid voice selection</string>
	<string name="reader_read_next_chapter_title">TTS Read Next Chapter</string>
	<string name="reader_read_next_chapter_desc">Automatically start reading the next chapter when using TTS.</string>
	<string name="version">Version</string>
	<string name="report_bug">Report bug</string>
	<string name="disclaimer">Disclaimer</string>
	<string name="license">License</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="theme">Theme</string>
	<string name="select_between">Select between</string>
	<string name="remove">Remove</string>
	<string name="update_now">Update now</string>
	<string name="migrate_sources">Migrate sources</string>
	<string name="selection">Selection</string>
	<string name="migrate_source">Migrate source</string>
	<string name="artist_s">Artist(s): </string>
	<string name="marking_mode">Marking Method</string>
	<string-array name="marking_names">
		<item>On View Selected</item>
		<item>On View Scrolled</item>
	</string-array>
	<string name="paused">Paused</string>
	<string name="completed">Completed</string>
	<string name="publishing">Publishing</string>
	<string name="unknown">Unknown</string>
	<string name="restore_now">Restore backup</string>
	<string name="settings_reader_tap_to_scroll_title">Tap to scroll</string>
	<string name="open_in_browser">Open in browser</string>
	<string name="open_in">Open in</string>
	<string name="reader">Reader</string>
	<string name="reader_summary">Reading display and behavior</string>
	<string name="default_reader">Default</string>
	<plurals name="toast_unread_count">
		<item quantity="one">%d unread chapter.</item>
		<item quantity="zero">No unread chapters.</item>
		<item quantity="other">%d chapters unread.</item>
	</plurals>
	<string name="remove_novel_cache">Remove Novel Cache</string>
	<string name="action_webview_back">Back</string>
	<string name="action_webview_forward">Forward</string>
	<string name="action_webview_refresh">Refresh</string>
	<string name="action_webview_clear_cookies">Clear Cookies</string>
	<string name="notification_app_update_check">App Update Check</string>
	<string name="notification_app_update_available_version">%s update available</string>
	<string name="notification_app_update_install_title">App Update Install</string>
	<string name="notification_app_update_loading">Loading app update</string>
	<string name="notification_app_update_downloading">Downloading app update</string>
	<string name="notification_app_update_install">Install app update</string>
	<string name="update_app_now_question">Update app now?</string>
	<string name="update_not_interested">Huh, not interested</string>
	<string name="light">Light</string>
	<string name="sepia">Sepia</string>
	<string name="dark">Dark</string>
	<string name="light_dark">Gray</string>
	<string name="custom">Custom</string>
	<string name="action_global_search_hint">Global search…</string>
	<string name="download_next_chapter">Download next chapter</string>
	<string name="download_next_5_chapters">Download next 5 chapters</string>
	<string name="download_next_10_chapters">Download next 10 chapters</string>
	<string name="download_custom_chapters">Download custom</string>
	<string name="update_complete">Completed Update</string>
	<string name="you_not_online">You are not online</string>
	<string name="download_chapter_updates">Download chapter updates</string>
	<string name="uninstall">Uninstall</string>
	<string name="install">Install</string>
	<string name="update">Update</string>
	<string name="chapters">Chapters</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="appearance">Appearance</string>
	<string name="appearance_summary">Change the appearance of the app</string>
	<string name="advanced">Advanced</string>
	<string name="advanced_summary">Dump logs, site protection</string>
	<string name="backup">Backup</string>
	<string name="loading">Loading…</string>
	<string name="amoled">Amoled</string>
	<string name="crashCommentPromt">Crash Report</string>
	<string name="crashDialogText">The application has crashed. Send a report to the developers?</string>
	<string name="columns_of_novel_listing_p">Columns of novels in portrait mode</string>
	<string name="columns_of_novel_listing_h">Columns of novels in landscape mode</string>
	<string name="columns_zero_automatic">0 means automatic</string>
	<string name="normal">Normal</string>
	<string name="compressed">Compressed</string>
	<string name="comfy">Comfy</string>
	<string name="novel_card_type_selector_title">Novel card type</string>
	<string name="novel_badge_toast_title">Novel badge toast</string>
	<string name="novel_badge_toast_desc">Toast when the unread badge is clicked to explain what it is for</string>
	<string name="apply">Apply</string>
	<string name="reset">Reset</string>
	<string name="listings">Listings</string>
	<string name="updating">Updating</string>
	<string name="intro_title_greet">Welcome to Shosetsu!</string>
	<string name="intro_what_is_app">What is Shosetsu?</string>
	<string name="intro_perm_title">Permissions</string>
	<string name="intro_happy_end">Wonderful!</string>
	<string name="intro_happy_end_desc">That\'s it for an intro, Read well!</string>
	<string name="backup_settings_option">Backup Settings</string>
	<string name="backup_chapters_option">Backup Chapters</string>
	<string name="backup_chapters_option_description">Default on, off will not save your progress</string>
	<string name="backup_settings_option_desc">Default is off, which will not save your settings</string>
	<string name="regret">This feature have not been reintroduced yet due to time constraints :(</string>
	<string name="installing">Installing</string>
	<string name="delete">Delete</string>
	<string name="pause">Pause</string>
	<string name="start">Start</string>
	<string name="extension_image_desc">Image of this extension</string>
	<string name="share">Share</string>
	<string name="browse">Browse</string>
	<string name="browse_summary">Repositories</string>
	<string name="more">More</string>
	<string name="restart">Restart</string>
	<string name="need_restart">Activity needs to restart</string>
	<string name="never_mind">Nevermind</string>
	<string name="fragment_novel_in_library">In library</string>
	<string name="fragment_novel_add_to_library">Add to library</string>
	<string name="obsolete_extension">Obsolete extension! Please uninstall.</string>
	<string name="id_label">ID:</string>
	<string name="repositories">Repositories</string>
	<string name="settings_reader_volume_scroll_title">Volume Scroll</string>
	<string name="all">All</string>
	<string name="about">About</string>
	<string name="about_summary">Shosetsu %s</string>
	<string name="check_for_app_update">Check for app update</string>
	<string name="source_licenses">Source Licenses</string>
	<string name="inverse_selection">Inverse Selection</string>
	<string name="downloading">Downloading</string>
	<string name="error">Error</string>
	<string name="resume">Resume</string>
	<string name="waiting">Waiting</string>
	<string name="settings_reader_title_mark_read_as_reading">Mark read as reading</string>
	<string name="settings_reader_desc_mark_read_as_reading">Allows the reader to mark a read chapter as reading when its opened up.</string>
	<string name="no_more_chapters">No more chapters</string>
	<string name="follow_system_theme">System</string>
	<string name="sort">Sort</string>
	<string name="bookmarked">Bookmarked</string>
	<string name="genres">Genres</string>
	<string name="tags">Tags</string>
	<string name="authors">Authors</string>
	<string name="artists">Artists</string>
	<string name="unread_status">Unread status</string>
	<string name="update_novel">Novel Updater</string>
	<string name="fragment_backup_settings_label">Backup Settings</string>
	<string name="restore_notification_content_text_outdated">Backup is outdated</string>
	<string name="restore_notification_content_missing_key">Backup does not contain \‘version\’ key</string>
	<string name="restore_notification_content_decoding_string">Decoding</string>
	<string name="restore_notification_content_unzipping_bytes">Unzipping</string>
	<string name="restore_notification_content_unexpected_empty">Received empty, should not happen</string>
	<string name="restore_notification_content_starting">Starting restore</string>
	<string name="restore_notification_title_adding_repos">Adding repositories</string>
	<string name="restore_notification_content_novel_load">Loading novel data</string>
	<string name="restore_notification_content_novel_save">Saving novel data</string>
	<string name="restore_notification_content_novel_chapters_save">Saving novel chapters</string>
	<string name="restore_notification_content_chapters_load">Loading chapters from database</string>
	<string name="restore_notification_content_completed">Completed!</string>
	<string name="restore_notification_subtitle">Restore</string>
	<string name="repository_add_name_hint">Repository name</string>
	<string name="repository_add_url_hint">Repository URL</string>
	<string name="repository_add_title">Add Repository</string>
	<string name="toast_repository_added">Repository Added</string>
	<string name="toast_repository_add_fail">Failed to add repository</string>
	<string name="help">Help</string>
	<string name="fragment_browse_option_Import">Import Novel</string>
	<string name="cozy">Cozy</string>
	<string name="extended">Extended</string>
	<string name="global_search">Global Search</string>
</resources>