<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/view_type_item"
        android:icon="@drawable/view_module"
        android:title="@string/novel_card_type_selector_title"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/view_type_normal"
                    android:title="@string/normal" />
                <item
                    android:id="@+id/view_type_comp"
                    android:title="@string/compressed" />
                <item
                    android:id="@+id/view_type_cozy"
                    android:title="@string/cozy" />
                <item
                    android:id="@+id/view_type_extended"
                    android:title="@string/extended" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/web_view"
        android:icon="@drawable/open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="ifRoom" />
</menu>