<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_manage_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/global_search"
        android:icon="@drawable/search"
        android:title="@string/global_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/help"
        android:icon="@drawable/help_outline_24"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/browse_import"
        android:title="@string/fragment_browse_option_Import"
        android:visible="false"
        app:showAsAction="never" />
</menu>